--- a/exercise-code/avro-schema-kafka/consumer.properties
+++ b/exercise-code/avro-schema-kafka/consumer.properties
@@ -8,7 +8,7 @@ group.id=cust-relations
 auto.offset.reset=earliest
 
 # KafkaAvroDeserializer properties
-schema.registry.url=http://edge2ai-0.dim.local:7788/api/v1
+schema.registry.url=http://localhost:7788/api/v1
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=com.hortonworks.registries.schemaregistry.serdes.avro.kafka.KafkaAvroDeserializer
 
