--- a/exercise-code/avro-schema-kafka/producer.properties
+++ b/exercise-code/avro-schema-kafka/producer.properties
@@ -6,7 +6,7 @@ com.cloudera.training.avro.exercise.schema.name=customers_avro
 # com.cloudera.training.avro.exercise.schema.version=1
 
 # KafkaAvroSerializer properties
-schema.registry.url=http://edge2ai-0.dim.local:7788/api/v1
+schema.registry.url=http://localhost:7788/api/v1
 
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=com.hortonworks.registries.schemaregistry.serdes.avro.kafka.KafkaAvroSerializer
